--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
         run: go mod verify
 
       - name: Run tests
+        shell: bash
         run: go test -race -shuffle=on -coverprofile=coverage.out ./...
 
       - name: Upload coverage
