Update CI workflow and improve directory scanning in init command
Modified the CI workflow to create nested directories for project initialization, enhancing the setup process. Additionally, updated the directory scanning logic in init.go to skip unreadable directories due to permission issues, improving error handling during directory scans.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,7 +132,8 @@ jobs:
           ./prjct --config "$CFG" archive "CI-Renamed"
           ./prjct --config "$CFG" export dev -o /tmp/exported.yaml
           ./prjct --config "$CFG" import /tmp/exported.yaml
-          ./prjct --config "$CFG" init /tmp -o /tmp/init-out.yaml
+          mkdir -p /tmp/prjct-init-test/sub1/nested /tmp/prjct-init-test/sub2
+          ./prjct --config "$CFG" init /tmp/prjct-init-test -o /tmp/init-out.yaml
           ./prjct --config "$CFG" reindex
           ./prjct completion bash > /dev/null
 
