Update release configuration and CI workflow for artifact management
Modified the .goreleaser.yml to enable replacement of existing artifacts and drafts during releases. Updated the GitHub Actions workflow to remove the release trigger on creation, streamlining the release process.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -77,4 +77,7 @@ release:
     name: prjct
   draft: false
   prerelease: auto
+  replace_existing_artifacts: true
+  replace_existing_draft: true
+  mode: replace
   name_template: "v{{.Version}}"
