Enhance project management features and improve command functionality
Updated the CI workflow to include additional commands for project management, such as info, note, clean, sync, bulk, clone, and undo. Enhanced the import command to support importing templates from both local files and remote URLs, improving flexibility. Introduced tag filtering in the list command to allow users to filter templates by tags. Added support for conditional directory creation based on evaluation of variables, enhancing the project creation process. Improved error handling and validation across various commands, ensuring a more robust user experience.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,6 +135,24 @@ jobs:
           mkdir -p /tmp/prjct-init-test/sub1/nested /tmp/prjct-init-test/sub2
           ./prjct --config "$CFG" init /tmp/prjct-init-test -o /tmp/init-out.yaml
           ./prjct --config "$CFG" reindex
+          ./prjct --config "$CFG" info "CI-Renamed"
+          ./prjct --config "$CFG" note "CI-Renamed" "smoke test note"
+          ./prjct --config "$CFG" note "CI-Renamed"
+          ./prjct --config "$CFG" clean "CI-Renamed" --dry-run
+          ./prjct --config "$CFG" sync "CI-Renamed" --dry-run
+          ./prjct --config "$CFG" readme dev
+          ./prjct --config "$CFG" validate "$CFG"
+          BULK_FILE=/tmp/prjct-bulk.yaml
+          cat > "$BULK_FILE" <<BULK
+          projects:
+            - template: dev
+              name: "BulkSmoke1"
+            - template: dev
+              name: "BulkSmoke2"
+          BULK
+          ./prjct --config "$CFG" bulk "$BULK_FILE"
+          ./prjct --config "$CFG" clone "CI-Renamed" "CI-Clone"
+          ./prjct --config "$CFG" undo
           ./prjct completion bash > /dev/null
 
       - name: Smoke test (Windows)
@@ -155,4 +173,7 @@ jobs:
           ./prjct.exe --config "$CFG" recent
           ./prjct.exe --config "$CFG" stats
           ./prjct.exe --config "$CFG" reindex
+          ./prjct.exe --config "$CFG" readme dev
+          ./prjct.exe --config "$CFG" validate "$CFG"
+          ./prjct.exe --config "$CFG" undo
           ./prjct.exe completion bash > /dev/null
